[package]
name = "rust-tide-pg-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
oauth2 = "4.4.2"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres"] }
tera = "1.20.0"
tide = "0.16.0"
tide-tera = "0.2.4"
uuid = { version = "1.3.4", features = ["serde", "v4"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.64"
serde_json = "1.0.128"
